# mini-nvs-solver

./: .gitignore  .pixi.sh  README.md  pyproject.toml
mini_nvs_solver/: depth_utils.py  nerfstudio_data.py  pose_utils.py  rr_logging_utils.py  threaded_logging_utils.py
mini_nvs_solver/api/: inference.py
mini_nvs_solver/custom_diffusers_pipeline/: svd.py
mini_nvs_solver/gradio_ui/: example_ui.py
src/: camera_parameters.py  depth_utils.py  image_warping.py  nerfstudio_data.py  pose_utils.py  rr_logging_utils.py  sigma_utils.py
src/api/: inference.py
src/custom_diffusers_pipeline/: scheduler.py  svd.py
tools/: gradio_app.py  rerun_demo.py  upload_to_hf.py
