[project]
name = "mini-nvs-solver"
version = "0.1.0"
description = "Add a short description here"
authors = [{ name = "Pablo Vela", email = "pablovela5620@gmail.com" }]
requires-python = ">= 3.10"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pixi.project]
channels = ["nvidia/label/cuda-11.8.0", "xformers", "conda-forge", "pytorch"]
platforms = ["linux-64"]

[tool.pixi.system-requirements]
libc = { family = "glibc", version = "2.31" }

[tool.pixi.activation]
scripts = [".pixi.sh"]


[tool.pixi.tasks]
_install-wheel = "python -m pip install $WHL_PATH --force-reinstall"
_build-wheel = "python -m pip install build && python -m build"
upload-hf = { cmd = "python tools/upload_to_hf.py", depends_on = [
    "_build-wheel",
] }

[tool.pixi.tasks.app]
cmd = """
    python tools/gradio_app.py
    """
description = "Runs Gradio frontend"

[tool.pixi.tasks.dev-app]
cmd = """
    gradio tools/gradio_app.py
    """
description = "Runs Gradio frontend for hotreload"

[tool.pixi.tasks.rerun-demo]
cmd = """
    python tools/rerun_demo.py --headless --connect
    """
description = "Runs Rerun demo"

[tool.pixi.feature.spaces.tasks.app]
cmd = """
    PYTORCH_JIT=0 python gradio_app.py
    """
description = "Runs Gradio frontend for depth comparison"
depends_on = ["_install-wheel"]

[tool.pixi.pypi-dependencies]
monopriors = { url = "https://test-files.pythonhosted.org/packages/8e/c1/f02361c406ab5e780aade6e6285ce30e1c99ad71633281286092d24e4bcf/monopriors-0.1.2-py3-none-any.whl" }
src = { path = ".", editable = true }

[tool.pixi.dependencies]
python = "3.10.*"
pip = ">=24.0,<25"
cuda = { version = "*", channel = "nvidia/label/cuda-11.8.0" }
pytorch-cuda = { version = "11.8.*", channel = "pytorch" }
pytorch = { version = "2.3.*", channel = "pytorch" }
torchvision = { version = "0.18.*", channel = "pytorch" }
xformers = { version = ">=0.0.26.post1,<0.0.27", channel = "xformers" }
beartype = ">=0.18.5,<0.19"
gradio = ">=4.37.2,<4.38"
rerun-sdk = ">=0.16.1,<0.17"
numpy = "<2.0.0"
jaxtyping = ">=0.2.30,<0.3"
einops = ">=0.8.0,<0.9"
transformers = ">=4.42.3,<4.43"
diffusers = ">=0.29.2,<0.30"
accelerate = ">=0.32.0,<0.33"
pyserde = ">=0.19.3,<0.20"
trimesh = ">=4.4.1,<4.5"
icecream = ">=2.1.3,<2.2"
timm = ">=1.0.7,<1.1"
wandb = ">=0.16.6,<0.17"
tqdm = ">=4.66.4,<4.67"

[tool.pixi.feature.spaces.pypi-dependencies]
spaces = "*"


[tool.pixi.environments]
spaces = { features = ["spaces"], solve-group = "default" }

[tool.ruff]
ignore = [
    "F722", # Forward annotation false positive from jaxtyping. Should be caught by pyright.
]
